[package]
name = "mincore"
description = "A safe Rust wrapper around the `mincore` system call"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rlee287/mincore-rs"
documentation = "https://docs.rs/mincore-rs"
readme = "README.md"
keywords = ["syscall", "file", "safe", "mincore"]
categories = ["os::unix-apis", "filesystem"]

[dependencies]
libc = "0.2.151"
rustix = { version = "0.38.28", features = ["fs", "mm", "param"] }
